--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 header{
-    background-image: url(image/atlas-green-1507-unsplash.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+    url(image/rawpixel-568382-unsplash.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -23,10 +24,18 @@ header{
 }
 
 .main-nav li a{
-    color:white;
+    color:rgba(255, 255, 255, 0.699);
     text-decoration: none;
-    padding: 20px 20px;
+    padding: 20px 50px;
     font-family: "Malgun Gothic", sans-serif;
     font-size: 20px;
 
+}
+
+.main-nav li.active a{
+    border: 2px solid rgba(255, 255, 255, 0.438);
+}
+
+.main-nav li a:hover{
+    color: 2px solid rgba(255, 0, 0, 0.452);
 }
