--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header{
 {
     float:right;
     list-style: none;
-    margin-top: 30px
+    margin-top: 30px;
 }
 
 .main-nav li{
@@ -26,16 +26,83 @@ header{
 .main-nav li a{
     color:rgba(255, 255, 255, 0.699);
     text-decoration: none;
-    padding: 20px 50px;
+    padding: 10px 40px;
     font-family: "Malgun Gothic", sans-serif;
     font-size: 20px;
 
 }
 
 .main-nav li.active a{
-    border: 2px solid rgba(255, 255, 255, 0.438);
+    border: 2px solid darkorange;
 }
 
 .main-nav li a:hover{
-    color: 2px solid rgba(255, 0, 0, 0.452);
+    border: 2px solid rgba(255, 0, 0, 0.7);
+    transition: all 0.5s ease
+}
+
+.logo img{
+    width: 70px;
+    height: 70px;
+    float: left;
+    margin: 10px;
+}
+
+.row
+{
+    max-width: 1200px;
+    margin: auto;
+}
+
+body{
+    font-family: malgun gothic;
+}
+
+.hero{
+    position: absolute;
+    width: 1200px;
+    margin-left: 0px;
+    margin-top: 0px;
+}
+
+h1{
+    color:white;
+    text-transform: uppercase;
+    font-size: 70px;
+    text-align: center;
+    margin-top: 275px;
+}
+
+.button
+{
+    margin-top:  30px;
+    margin-left: 440px;
+}
+
+.btn{
+    border: 1px solid white;
+    padding: 10px 30px;
+    color: white;
+    text-decoration: none;
+    margin-right: 5px;
+    font-size: 13px;
+    text-transform: uppercase;
+
+}
+
+.btn-one{
+    
+    background-color: darkorange;
+    font-family: "Malgun Gothic", sans-serif
+
+}
+.btn-two{
+    
+    font-family: "Malgun Gothic", sans-serif
+}
+
+.btn-two:hover
+{
+    background-color: darkred;
+    transition: all 0.5s ease
 }
