--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ header{
 }
 
 .logo img{
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 66px;
     float: left;
     margin: 10px;
 }
@@ -61,8 +61,8 @@ body{
 .hero{
     position: absolute;
     width: 1200px;
-    margin-left: 0px;
-    margin-top: 0px;
+    margin-left: 100px;
+    margin-top: 50px;
 }
 
 h1{
@@ -76,7 +76,7 @@ h1{
 .button
 {
     margin-top:  30px;
-    margin-left: 440px;
+    margin-left: 350px;
 }
 
 .btn{
@@ -85,8 +85,9 @@ h1{
     color: white;
     text-decoration: none;
     margin-right: 5px;
-    font-size: 13px;
+    font-size: 20px;
     text-transform: uppercase;
+
 
 }
 
@@ -101,8 +102,18 @@ h1{
     font-family: "Malgun Gothic", sans-serif
 }
 
+.btn-one:hover
+{
+    background-color: darkorange;
+    border: 1px solid black;
+    color: black;
+    transition: all 0.5s ease
+}
+
 .btn-two:hover
 {
     background-color: darkred;
+    border: 1px solid black;
+    color: black;
     transition: all 0.5s ease
 }
