--- a/style.css
+++ b/style.css
@@ -41,13 +41,6 @@ header{
     transition: all 0.5s ease
 }
 
-.logo img{
-    width: 100px;
-    height: 66px;
-    float: left;
-    margin: 10px;
-}
-
 .row
 {
     max-width: 1200px;
@@ -58,11 +51,14 @@ body{
     font-family: malgun gothic;
 }
 
-.hero{
+.intro{
+
     position: absolute;
-    width: 1200px;
-    margin-left: 100px;
-    margin-top: 50px;
+    top: 40%;
+    width: 100%;
+    right: 20%;
+    text-align: center;
+
 }
 
 h1{
@@ -70,16 +66,15 @@ h1{
     text-transform: uppercase;
     font-size: 70px;
     text-align: center;
-    margin-top: 275px;
 }
 
-.button
+.box
 {
     margin-top:  30px;
     margin-left: 350px;
 }
 
-.btn{
+.bx{
     border: 1px solid white;
     padding: 10px 30px;
     color: white;
@@ -91,29 +86,29 @@ h1{
 
 }
 
-.btn-one{
+.bx1{
     
     background-color: darkorange;
     font-family: "Malgun Gothic", sans-serif
 
 }
-.btn-two{
+.bx2{
     
     font-family: "Malgun Gothic", sans-serif
 }
 
-.btn-one:hover
+.bx1:hover
 {
     background-color: darkorange;
     border: 1px solid black;
     color: black;
-    transition: all 0.5s ease
+    transition: all 1s ease
 }
 
-.btn-two:hover
+.bx2:hover
 {
     background-color: darkred;
     border: 1px solid black;
     color: black;
-    transition: all 0.5s ease
+    transition: all 1s ease
 }
