--- a/faq.css
+++ b/faq.css
@@ -23,23 +23,24 @@ body{
     text-align: center;
 }
 
-.profile-img{
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
+.faqimg{
+
+    width: 30%;
+    height: 30%;
 }
 
 .profile h1{
     font-size: 40px;
     letter-spacing: 4px;
     font-weight: 100;
-    color: darkorange;
+    color: rgb(255, 255, 255);
 }
 
 .profile h5{
-    font-size: 20px;
+    font-size: 30px;
     letter-spacing: 1px;
     font-weight: 100;
+    color: darkorange;
 
 }
 
