--- a/index.css
+++ b/index.css
@@ -38,7 +38,8 @@ header{
 
 .main-nav li a:hover{
     border: 2px solid rgba(255, 0, 0, 0.7);
-    transition: all 0.5s ease
+    transition: all 0.5s ease;
+    color: darkred;
 }
 
 .row
