--- a/faq.css
+++ b/faq.css
@@ -12,7 +12,7 @@ body{
 }
 
 
-.profile{
+.box{
     position: absolute;
     background: rgba(95, 87, 87, 0.7);
     color: white;
@@ -29,14 +29,14 @@ body{
     height: 30%;
 }
 
-.profile h1{
+.box h1{
     font-size: 40px;
     letter-spacing: 4px;
     font-weight: 100;
     color: rgb(255, 255, 255);
 }
 
-.profile h5{
+.pbox h5{
     font-size: 30px;
     letter-spacing: 1px;
     font-weight: 100;
