--- a/gallery.css
+++ b/gallery.css
@@ -5,37 +5,36 @@
 }
 
 body{
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+    background-image:linear-gradient(rgba(0, 0, 0, 0.85), rgba(0,0,0,0.85)),
     url(image/rawpixel-568382-unsplash.jpg);
     background-size: cover;
     background-position: center;
 }
 
 
-.profile{
+.box{
     position: absolute;
-    /* background: rgba(0, 0, 0, 0.7); */
     color: white;
     padding: 40px;
     font-family: 'Malgun Gothic', sans-serif;
-    top: 20%;
+    top: 10%;
     width: 100%;
     text-align: center;
 }
 
-.profile-img{
+.box-img{
     width: 30%;
     height: 30%;
 }
 
-.profile h1{
+.box h1{
     font-size: 40px;
     letter-spacing: 4px;
     font-weight: 100;
     color: darkorange;
 }
 
-.profile h5{
+.box h5{
     font-size: 20px;
     letter-spacing: 1px;
     font-weight: 100;
